Fixed bug where drivercenter modal covered entire screen

--- a/public/stylesheets/index.less
+++ b/public/stylesheets/index.less
@@ -2,11 +2,8 @@
   margin-left: 10px;
   margin-right: 10px;
 
-  div {
-    display: inline-block;
-  }
-
   .dashboard-wrapper {
+    display: inline-block;
     width: 70%;
 
     .dashboard-content-wrapper {
@@ -29,6 +26,7 @@
   }
 
   .alerts-wrapper {
+    display: inline-block;
     width: 30%;
     vertical-align: top;
 
